# picarro

./: .gitignore  CHANGES.md  CONTRIBUTING.md  README.md  picarro.py  plot_interpolation.py  plotit.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  test_picarro.py  todo.md
dev-analysis/: .gitignore  example_data.py  flux-estimation-in-principle.ipynb  notes-data-analysis.md  picarro-data-overview.ipynb  plot_interpolation.py  plot_measurement.py
example_data/: example_chunks.csv  example_chunks.json
requirements/: dev.in  dev.txt
src/picarro/: __init__.py  analyze.py  app.py  chunks.py  cli.py  config.py  core.py  data.py  database.py  fluxes.py  logging.py  measurements.py  plot.py  read.py  sqliteutil.py  util.py
src/picarro/resources/: schema.sql
tests/: config_example.toml  test_analyze.py  test_app.py  test_chunks.py  test_config.py  test_fluxes.py  test_measurements.py  test_picarro.py  test_picarro_analyze.py  test_picarro_read.py  test_read.py
