[metadata]
name = picarro
version = attr: picarro.__version__
url = https://example.com
project_urls =
    Documentation = https://example.com/docs
    Changes = https://example.com/changes
    Source Code = https://example.com/code-repository
    Issue Tracker = https://example.com/issue-tracker
license = none # to be determined
license_files = LICENSE
author = Rasmus Einarsson
author_email =  python-picarro@rasmuseinarsson.se
maintainer = Rasmus Einarsson
maintainer_email = python-picarro@rasmuseinarsson.se
description = A package to analyze data from a Picarro G2308. YMMV.
keywords =
    picarro
long_description = file: README.md
long_description_content_type = text/markdown
# See list of classifiers at https://pypi.org/classifiers/
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Software Development

[options]
package_dir =
    = src
packages = find:
include_package_data = true
python_requires = >= 3.7
install_requires =
    pandas >= 1.3
    matplotlib >= 3.5
    scipy >= 1.7
    click >= 8.0
    cattrs >= 1.10
    toml >= 0.10.2

[options.package_data]
picarro = resources

[options.entry_points]
console_scripts =
    picarro = picarro.cli:cli

[options.packages.find]
where = src

[tool:pytest]
testpaths = tests
filterwarnings =
    error
